@@ -1,6 +1,7 @@
 package com.example.ch4_1_newsfeed.service;
 
 import com.example.ch4_1_newsfeed.dto.user.response.FindAllFeedResponseDto;
+import com.example.ch4_1_newsfeed.dto.user.response.FindByUserAndFeedIdResponseDto;
 import com.example.ch4_1_newsfeed.dto.user.response.FindByUserIdResponseDto;
 import com.example.ch4_1_newsfeed.entity.Feed;
 import com.example.ch4_1_newsfeed.repository.FeedRepository;
@@ -8,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +20,6 @@ public class FeedServiceT {
         // Feed 데이터를 모두 가져옴 (실제 서비스에서는 페이징 적용 필요)
         List<Feed> feeds = feedRepository.findAll();
 
-        // Feed -> FindAllFeedResponseDto로 변환
         return feeds.stream()
                 .map(feed -> new FindAllFeedResponseDto(
                         feed.getId(),
@@ -28,8 +27,7 @@ public class FeedServiceT {
                         feed.getDescription(),
                         feed.getCreatedAt(),
                         feed.getPhoto() // Feed와 연결된 Photo 리스트
-                ))
-                .collect(Collectors.toList());
+                )).toList();
     }
 
     public List<FindByUserIdResponseDto> findByUserId(Long user_id) {
@@ -41,5 +39,17 @@ public class FeedServiceT {
                         feed.getCreatedAt(),
                         feed.getPhoto()
                 )).toList();
+    }
+
+    public FindByUserAndFeedIdResponseDto findByUserAndFeed(Long user_id, Long feed_id) {
+        Feed byIdAndId = feedRepository.findByIdAndId(user_id, feed_id);
+
+        return new FindByUserAndFeedIdResponseDto(
+                byIdAndId.getId(),
+                byIdAndId.getDescription(),
+                byIdAndId.getUser(),
+                byIdAndId.getPhoto(),
+                byIdAndId.getCreatedAt()
+        );
     }
 }
